--- a/tiendita/productos/templates/productos/base.html
+++ b/tiendita/productos/templates/productos/base.html
@@ -27,7 +27,7 @@
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a href="Inicio" >Inicio</a></li>
                 <li class="tab"><a href="Cabritas" >Palomitas</a></li>
-                <li class="tab"><a href="Bebidas" >Refrescos1</a></li>
+                <li class="tab"><a href="Bebidas" >Refrescos</a></li>
                 <li class="tab"><a href="Snack" >Snacks</a></li>
                 <li class="tab"><a href="administrar" >Administracion</a></li>
                 <li class="tab"><a href="{% url 'auth_logout' %}" >Cerrar Sesion</a></li>
