--- a/tiendita/productos/templates/productos/formulario_agregar.html
+++ b/tiendita/productos/templates/productos/formulario_agregar.html
@@ -33,7 +33,7 @@
                       <option value="Seleccionar" disabled selected>Elige alguna opcion</option>
                       <option value="Bebida">Bebida</option>
                       <option value="Snack">Snack</option>
-                      <option value="Cabrita">Bebida </option>
+                      <option value="Cabrita">Cabrita </option>
                     </select>
                 </div>
             </div>
