--- a/tiendita/productos/templates/productos/formulario_editar.html
+++ b/tiendita/productos/templates/productos/formulario_editar.html
@@ -32,19 +32,19 @@
                  <select name="tipo" value="{{producto.tipo}}">
                      <option value="Seleccionar" disabled>Seleccionar</option>
                      {% if producto.tipo == "bebida" %}
-                         <option value="bebida" selected>Bebida</option>
+                         <option value="Bebida" selected>Bebida</option>
                      {% else %}
-                         <option value="bebida">Bebida</option>
+                         <option value="Bebida">Bebida</option>
                      {% endif %}
                      {% if producto.tipo == "snack" %}
-                         <option value="snack" selected>Snack</option>
+                         <option value="Snack" selected>Snack</option>
                      {% else %}
-                         <option value="snack">Snack</option>
+                         <option value="Snack">Snack</option>
                      {% endif %}
                      {% if producto.tipo == "cabritas" %}
-                         <option value="snack" selected>Cabritas</option>
+                         <option value="Cabrita" selected>Cabritas</option>
                      {% else %}
-                         <option value="snack">Cabritas</option>
+                         <option value="Cabrita">Cabrita</option>
                      {% endif %}
                  </select><br>
             </div>
