--- a/tiendita/productos/templates/productos/Bebidas.html
+++ b/tiendita/productos/templates/productos/Bebidas.html
@@ -5,17 +5,15 @@
 
 {% block content%}
     {% load static %}
-    <div class="row" style="background-color: #f8f4e8;">
+    <div class="row">
         {% for p in productos %}
-        <div class="row">
             {% if p.foto %}
-            <div class="col s4 offset-s2">
-                <img src="{{ p.foto.url }}"  alt="" width="250" height="250">
+            <div class="col s12 m4 l3 ">
+                <center><img src="{{ p.foto.url }}"  alt="" width="250" height="250"></center>
                 <br>
-                <p class="flow-text">{{p.nombre}} ${{p.precio}}</p>
+                <center><p class="flow-text">{{p.nombre}} ${{p.precio}}</p></center>
             </div>
             {% endif %}
-        </div>
         {% endfor %}
     </div>
 {% endblock %}
