--- a/tiendita/productos/templates/productos/Snack.html
+++ b/tiendita/productos/templates/productos/Snack.html
@@ -4,47 +4,15 @@
 
 {% block content%}
     {% load static %}
-    <div class="row" style="background-color: #f8f4e8;">
-        <div class="row">
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/LAYS.png' %}" alt="" width="200" height="200">
+    <div class="row">
+        {% for p in productos %}
+            {% if p.foto %}
+            <div class="col s12 m4 l3 ">
+                <center><img src="{{ p.foto.url }}"  alt="" width="250" height="250"></center>
                 <br>
-                <p class="flow-text">PAPAS LAYS $1.200</p>
+                <center><p class="flow-text">{{p.nombre}} ${{p.precio}}</p></center>
             </div>
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/DORITOS.png' %}" alt="" width="200" height="200">
-                <br>
-                <p class="flow-text">DORITOS $1.500</p>
-            </div>
-        </div>
-        <div class="row">
-            <br>
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/CHEETOS_FLAMING.png' %}" alt="" width="200" height="200">
-                <br>
-                <p class="flow-text">CHEETOS FUEGO $1.400</p>
-            </div>
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/CHEETOS.png' %}" alt="" width="200" height="200">
-                <br>
-                <p class="flow-text">CHEETOS $1.200</p>
-            </div>
-        </div>
-        <div class="row">
-            <br>
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/LAYS_MIEL.png' %}" alt="" width="200" height="200">
-                <br>
-                <p class="flow-text">LAYS MIEL $1.300</p>
-            </div>
-            <div class="col s4 offset-s2">
-                <img src="{% static 'SNACKS/DORITOS_FLAMING.png' %}" alt="" width="200" height="200">
-                <br>
-                <p class="flow-text">DORITOS FUEGO $1.500</p>
-            </div>
-        </div>
+            {% endif %}
+        {% endfor %}
     </div>
-{% endblock %}
-
-{% block javascript%}
 {% endblock %}
