--- a/tiendita/productos/templates/productos/administrar.html
+++ b/tiendita/productos/templates/productos/administrar.html
@@ -45,7 +45,7 @@
             <div class="col s3 offset-s1">
                 <img src="{% static 'Iconos/extra.png' %}"  alt="" width="200" height="200">
                 <br>
-                <p class="flow-text">OPCIONES EXTRAS</p>
+                <p class="flow-text">MIRA UN GIFT</p>
             </div>
         </div>
     </div>
