--- a/tiendita/productos/templates/productos/formulario_agregar.html
+++ b/tiendita/productos/templates/productos/formulario_agregar.html
@@ -30,7 +30,7 @@
                 <label>Tipo  :</label>
                 <div class="input-field ">
                     <select name="tipo">
-                      <option value="Seleccionar" disabled selected>Elige alguna opcion</option>
+                      <option value="" disabled selected>Elige alguna opcion</option>
                       <option value="Bebida">Bebida</option>
                       <option value="Snack">Snack</option>
                       <option value="Cabrita">Cabrita </option>
