--- a/tiendita/templates/registration/password_reset_form.html
+++ b/tiendita/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<h3 class='text-align-center'><strong>Restablecer Contraseña</strong></h3><br/>
+<h3 class='text-align-center'><strong>Ingrese su E-mail porfavor</strong></h3><br/>
 <hr>
 <br>
 <br>
@@ -22,7 +22,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <center>
-            <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i><input type="submit" value="{% trans 'Enviar' %}"></a>
+            <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i><input type="submit" value="{% trans 'Enviar' %}"> </a>
             <a href="{% url 'auth_login' %}" class="waves-effect waves-light btn">CANCELAR</a>
             </center>
         </form>
