Porfin pudimos arreglar el cambio de contra uwu

--- a/tiendita/templates/registration/password_reset_complete.html
+++ b/tiendita/templates/registration/password_reset_complete.html
@@ -2,9 +2,25 @@
 {% load i18n %}
 
 {% block content %}
-
-<p>{% trans "Contraseña ha sido restablecida correctamente." %}</p>
-
-<p><a href="{% url 'auth_login' %}">{% trans "Iniciar sesión" %}</a></p>
-
+<h3 class='text-align-center'><strong>FELICIDADES</strong></h3><br/>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="row">
+    <div class='col s4 offset-s4'>
+            <center>
+                <p>{% trans "Contraseña ha sido restablecida correctamente." %}</p>
+                <br>
+                <a href="{% url 'auth_login' %}" class="waves-effect waves-light btn">INICIAR SESION</a>
+            </center>
+    </div>
+</div>
 {% endblock %}
+
+
+
