--- a/tiendita/templates/registration/password_reset_confirm.html
+++ b/tiendita/templates/registration/password_reset_confirm.html
@@ -6,10 +6,25 @@
 
 {% if validlink %}
 <form method="post" action=".">
-  {% csrf_token %} 
+  <h3 class='text-align-center'><strong>CAMBIE SU CONTRASEÑA</strong></h3>
+    <hr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  <div class='row'>
+        <div class="col s4 offset-s4">
 
+            <form method="post" action=".">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <center><input class='btn btn-block btn-primary' type="submit" value="{% trans 'Enviar' %}" /></center>
+            </form>
+        </div>
+    </div>
 
-  <input class='btn btn-block btn-primary' type="submit" value="{% trans 'Enviar' %}" />
 </form>
 </div> 
 
