--- a/tiendita/templates/registration/password_reset_email.html
+++ b/tiendita/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-{% blocktrans %}Restablecer contraseña en {{ site_name }}{% endblocktrans %}:
+{% blocktrans %}Restablecer contraseña en KIRBY STORE {% endblocktrans %}:
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
+{{ protocol }}://127.0.0.1:8000{% url 'auth_password_reset_confirm' uid token %}
 {% endblock %}
 
