--- a/tiendita/templates/registration/password_reset_done.html
+++ b/tiendita/templates/registration/password_reset_done.html
@@ -2,5 +2,27 @@
 {% load i18n %}
 
 {% block content %}
-<p class='lead'>{% trans "Un email con instrucciones para restablecer tu contraseña ha sido enviado." %}</p>
+<h3 class='text-align-center'><strong>FELICIDADES :D</strong></h3><br/>
+<hr>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="row">
+    <div class='col s4 offset-s4'>
+            <center>
+                <p class='lead'>{% trans "Un email con instrucciones para restablecer tu contraseña ha sido enviado." %}</p>
+                <br>
+                <a href="{% url 'auth_login' %}" class="waves-effect waves-light btn">VOLVER</a>
+            </center>
+    </div>
+</div>
 {% endblock %}
+
+
+
+
+
