SE AGREGO EL DWA Y FUNCIONA CORRECTAMENTE

--- a/tiendita/productos/templates/productos/Inicio.html
+++ b/tiendita/productos/templates/productos/Inicio.html
@@ -1,6 +1,6 @@
 {% extends "productos/base.html" %}
 
-{%block title %} Inicio jeje {% endblock%}
+{%block title %} Inicio De KirbyStore {% endblock%}
 
 {% block content%}
     {% load static %}
